# ldsc

./: ldsc.py  munge_sumstats.py  pyproject.toml
ldscore/: irwls.py  jackknife.py  ldscore.py  parse.py  regressions.py  sumstats.py
src/ldsc/: irwls.py  jackknife.py  parse.py  regressions.py  sumstats.py
src/ldsc/scripts/: ldsc.py  munge_sumstats.py
test/: simulate.py  test_irwls.py  test_jackknife.py  test_ldscore.py  test_munge_sumstats.py  test_parse.py  test_regressions.py  test_sumstats.py
